--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "author": "Open Studios < team@openstudios.xyz >",
   "version": "3.0.0",
   "description": "The homepage of Open Studios and a Kettlefish inspired Eleventy boilerplate",
+  "type": "module",
   "scripts": {
     "build": "cross-env NODE_ENV=production npm-run-all clean -p build:*",
     "build:11ty": "eleventy --quiet",
@@ -15,7 +16,10 @@
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
     "cross-env": "^7.0.3",
+    "esbuild": "0.19.1",
     "npm-run-all": "^4.1.5",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "three": "^0.153.0",
+    "three-bvh-csg": "^0.0.9"
   }
 }
