--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
     "cross-env": "^7.0.3",
+    "detect-gpu": "^5.0.37",
     "esbuild": "0.19.1",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
