--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cross-env": "^7.0.3",
     "detect-gpu": "^5.0.37",
     "esbuild": "0.19.1",
+    "jstransformer-markdown-it": "^3.0.0",
     "npm-run-all": "^4.1.5",
     "pug": "^3.0.2",
     "three": "^0.153.0",
