--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "esbuild": "0.19.1",
     "jstransformer-markdown-it": "^3.0.0",
     "npm-run-all": "^4.1.5",
+    "postprocessing": "^6.35.3",
     "pug": "^3.0.2",
-    "three": "^0.153.0",
-    "three-bvh-csg": "^0.0.9"
+    "three": "^0.163.0",
+    "three-bvh-csg": "^0.0.16"
   }
 }
