#31 - Implementing stylus compilation to prevent multiple http requests for css

--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "build": "cross-env NODE_ENV=production npm-run-all clean -p build:*",
     "build:11ty": "eleventy --quiet",
     "build:esbuild": "node build.mjs",
+    "build:stylus": "node_modules/.bin/stylus src/styles/1999.styl --out docs/assets/styles/1999.css",
     "clean": "rimraf dist",
     "dev": "npm-run-all clean build:* -p dev:*",
     "dev:11ty": "eleventy --serve --quiet",
-    "dev:esbuild": "node watch.mjs"
+    "dev:esbuild": "node watch.mjs",
+    "dev:stylus": "node_modules/.bin/stylus -w src/styles/1999.styl --out docs/assets/styles/1999.css",
+    "preinstall": "npm install stylus -g"
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
@@ -21,6 +24,7 @@
     "npm-run-all": "^4.1.5",
     "postprocessing": "^6.35.3",
     "pug": "^3.0.2",
+    "stylus": "^0.63.0",
     "three": "^0.163.0",
     "three-bvh-csg": "^0.0.16"
   }
