--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "build": "cross-env NODE_ENV=production npm-run-all clean -p build:*",
     "build:11ty": "eleventy --quiet",
     "build:esbuild": "node build.mjs",
-    "build:stylus": "node_modules/.bin/stylus src/styles/1999.styl --out docs/assets/styles/1999.css",
+    "build:stylus": "node_modules/.bin/stylus src/styles/1999.styl --out docs/assets/css/1999.css",
     "clean": "rimraf dist",
     "dev": "npm-run-all clean build:* -p dev:*",
     "dev:11ty": "eleventy --serve --quiet",
     "dev:esbuild": "node watch.mjs",
-    "dev:stylus": "node_modules/.bin/stylus -w src/styles/1999.styl --out docs/assets/styles/1999.css",
+    "dev:stylus": "node_modules/.bin/stylus -w src/styles/1999.styl --out docs/assets/css/1999.css",
     "preinstall": "npm install stylus -g"
   },
   "devDependencies": {
@@ -21,6 +21,7 @@
     "detect-gpu": "^5.0.37",
     "esbuild": "0.19.1",
     "jstransformer-markdown-it": "^3.0.0",
+    "keen-slider": "^6.8.6",
     "npm-run-all": "^4.1.5",
     "postprocessing": "^6.35.3",
     "pug": "^3.0.2",
