--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "jstransformer-markdown-it": "^3.0.0",
     "keen-slider": "^6.8.6",
     "npm-run-all": "^4.1.5",
+    "parvus": "^2.6.0",
     "postprocessing": "^6.35.3",
     "pug": "^3.0.2",
     "stylus": "^0.63.0",
     "three": "^0.163.0",
-    "three-bvh-csg": "^0.0.16"
+    "three-bvh-csg": "^0.0.16",
+    "three-mesh-bvh": "^0.7.5"
   }
 }
