--- a/package.json
+++ b/package.json
@@ -17,18 +17,22 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "@11ty/eleventy-fetch": "^4.0.1",
+    "axios": "^1.7.7",
     "cross-env": "^7.0.3",
-    "detect-gpu": "^5.0.37",
-    "esbuild": "0.19.1",
+    "detect-gpu": "^5.0.48",
+    "esbuild": "0.23.1",
+    "jsdom": "^25.0.0",
     "jstransformer-markdown-it": "^3.0.0",
     "keen-slider": "^6.8.6",
     "npm-run-all": "^4.1.5",
     "parvus": "^2.6.0",
-    "postprocessing": "^6.35.3",
-    "pug": "^3.0.2",
+    "postprocessing": "^6.36.2",
+    "prismjs": "^1.29.0",
+    "pug": "^3.0.3",
     "stylus": "^0.63.0",
-    "three": "^0.163.0",
+    "three": "^0.168.0",
     "three-bvh-csg": "^0.0.16",
-    "three-mesh-bvh": "^0.7.5"
+    "three-mesh-bvh": "^0.8.0"
   }
 }
